first upload to github

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
+    "downloadjs": "^1.4.7",
+    "file-saver": "^2.0.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.0",
     "prop-types": "^15.7.2",
@@ -13,9 +15,12 @@
     "react-hooks": "^1.0.1",
     "react-hooks-helper": "^1.6.0",
     "react-moment": "^0.7.0",
+    "react-native": "^0.61.5",
+    "react-otp-input": "^1.0.1",
+    "react-pdf": "^4.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "reactstrap": "^8.4.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.5",
