--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "devconnector",
+  "name": "mbamcaadmission",
   "version": "1.0.0",
-  "description": "Social network for developers",
+  "description": "Website for Tamil Nadu MBA MCA admission",
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
@@ -11,21 +11,36 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Brad Traversy",
+  "author": "Lartum",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "blob-stream": "^0.1.3",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
-    "express": "^4.16.3",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "gravatar": "^1.6.0",
+    "html-pdf": "^2.2.0",
+    "iframe": "^1.0.0",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
+    "nexmo": "^2.6.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^9.4.1"
+    "path": "^0.12.7",
+    "pdfkit": "^0.11.0",
+    "socket.io": "^2.3.0",
+    "validator": "^9.4.1",
+    "voilab-pdf-table": "^0.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
+  },
+  "engines": {
+    "node":"10.16.3"
   }
 }
