--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.8",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "downloadjs": "^1.4.7",
@@ -11,6 +12,7 @@
     "moment": "^2.22.0",
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
+    "react-date-picker": "^7.10.0",
     "react-dom": "^16.3.1",
     "react-hooks": "^1.0.1",
     "react-hooks-helper": "^1.6.0",
