--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
     "@react-pdf/renderer": "^1.6.8",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
-    "downloadjs": "^1.4.7",
-    "file-saver": "^2.0.2",
+    "joi": "^14.3.1",
+    "joi-validation-strategy": "^0.3.3",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.11.0",
     "react": "^16.3.1",
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.3.1",
@@ -23,6 +24,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4",
+    "react-stepzilla": "^6.0.2",
+    "react-validation-mixin": "^5.4.0",
     "reactstrap": "^8.4.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.5",
