--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "path": "^0.12.7",
     "pdfkit": "^0.11.0",
     "public-ip": "^4.0.0",
+    "razorpay": "^2.0.6",
     "react-pdf": "^4.1.0",
     "socket.io": "^2.3.0",
     "validator": "^9.4.1",
