--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "iframe": "^1.0.0",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
+    "multer": "^1.4.2",
     "nexmo": "^2.6.0",
     "nodemailer": "^6.4.3",
     "passport": "^0.4.0",
