--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "public-ip": "^4.0.0",
     "razorpay": "^2.0.6",
     "react-pdf": "^4.1.0",
+    "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "validator": "^9.4.1",
     "voilab-pdf-table": "^0.5.0"
