--- a/package.json
+++ b/package.json
@@ -17,14 +17,10 @@
     "@sendgrid/mail": "^6.5.3",
     "aws-sdk": "^2.625.0",
     "bcryptjs": "^2.4.3",
-    "blob-stream": "^0.1.3",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
     "fs": "0.0.1-security",
     "gravatar": "^1.6.0",
     "html-pdf": "^2.2.0",
@@ -32,19 +28,13 @@
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
     "multer": "^1.4.2",
-    "nexmo": "^2.6.0",
     "nodemailer": "^6.4.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
-    "pdfkit": "^0.11.0",
-    "public-ip": "^4.0.0",
     "razorpay": "^2.0.6",
-    "react-pdf": "^4.1.0",
     "request": "^2.88.2",
-    "socket.io": "^2.3.0",
-    "validator": "^9.4.1",
-    "voilab-pdf-table": "^0.5.0"
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
