--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.4.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "public-ip": "^4.0.1",
     "razorpay": "^2.0.6",
     "request": "^2.88.2",
     "validator": "^9.4.1"
