--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "gravatar": "^1.6.0",
+    "gridfs-stream": "^1.1.1",
     "iframe": "^1.0.0",
     "jsonwebtoken": "^8.2.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.0.12",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.3",
     "nodemailer": "^6.4.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
