--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.0.12",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.3",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
