--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.3.1",
     "react-hooks": "^1.0.1",
+    "react-images-upload": "^1.2.8",
     "react-moment": "^0.7.0",
     "react-pdf": "^4.1.0",
     "react-redux": "^5.0.7",
