--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.5",
     "joi": "^14.3.1",
     "joi-validation-strategy": "^0.3.3",
+    "jquery": "^3.5.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.0",
     "prop-types": "^15.7.2",
