revealing the keys

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /node_modules
 package-lock.json
 /config/keys_dev.js
-/config/keys_prod.js
-/config/sendgrid.js
+# /config/keys_prod.js
+# /config/sendgrid.js
